# heimdex_mvp

./: .dockerignore  .env.example.dev  .env.example.prod  .env.example.staging  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  sanity_check.py
app/: cli.py  main.py  schemas.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  routes_admin.py  routes_assets.py  routes_ingest.py  routes_jobs.py  routes_system.py  schemas.py
app/core/: __init__.py  auth.py  config.py  db.py  jobs.py  logging.py  storage.py
app/db/: models.py
app/domain/: __init__.py
app/ingest/: __init__.py  asset_id.py  ffprobe_parser.py  sidecar_schema.py  thumbnails.py
app/legacy/: __init__.py  api.py  schemas.py
app/services/: ingest_service.py
app/workers/: __init__.py  tasks.py
docs/: 2025-10-27.md  README.md  SYSTEM_OVERVIEW.md
migrations/: env.py
migrations/versions/: 20241010_000001_initial_schema.py
tests/: conftest.py  test_api_v1.py  test_asset_id.py  test_bootstrap_env.py  test_ffprobe_parser.py  test_main.py  test_sidecar_schema.py  test_storage_backend.py  test_thumbnails.py
tests/fixtures/ffprobe_json/: mkv_vfr.json  mp4_h264_aac.json  mp4_h264_no_audio.json  weird_tags.json
