[project]
name = "heimdex_mvp"
version = "0.1.0"
description = "VNA dev environment with ffmpeg/ffprobe, PySceneDetect, and uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic>=2.8.0",
  "scenedetect>=0.6.3",
  "opencv-python-headless>=4.10.0",
  "ffmpeg-python>=0.2.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "rich>=13.7.1",
  "uvicorn[standard]>=0.31.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "httpx"
]

[tool.uv]
# uv will create and manage a venv automatically when using `uv sync` or `uv run`.
# No special config required, but this block is here if you want to extend later.

[tool.pyscenedetect]
# Example default options you might apply later.
# min-scene-len = 15
